--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="profile-image">
-        <img src="images/me.jpg" alt="A headshot of Ellie Haist smiling in front of a wall in Dublin, Ireland." class="profile-image">
+        <img src="images/me.JPG" alt="A headshot of Ellie Haist smiling in front of a wall in Dublin, Ireland." class="profile-image">
         <figcaption>Me in Dublin, Ireland ☘️</figcaption>
     </div>
 
@@ -46,7 +46,7 @@
     </div>
 
     <div class="bookstore-image">
-        <img src="images/bookstore.jpeg" alt="A photo of Ellie in a bookstore in Cape Town, South Africa.">
+        <img src="images/bookstore.JPEG" alt="A photo of Ellie in a bookstore in Cape Town, South Africa.">
         <figcaption>Me exploring a bookstore in Cape Town, South Africa 🇿🇦</figcaption>
     </div>
 
